force-app/main/default/objects/Loan_Application__c/fields/Annual_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Rate__c</fullName>
    <label>Annual Interest Rate</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>