force-app/main/default/objects/Loan_Application__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <displayFormat>LA-{YYYY}-{00000}</displayFormat>
    <label>Application</label>
    <type>AutoNumber</type>
</CustomField>