force-app/main/default/objects/Loan_Application__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer_Banking__c</referenceTo>
    <relationshipLabel>Loanapplications</relationshipLabel>
    <relationshipName>Loanapplications</relationshipName>
    <type>Lookup</type>
</CustomField>