force-app/main/default/objects/Loan_Application__c/fields/EMI_Record_Creation__c.field-meta.xml
<CustomField>
    <fullName>EMI_Record_Creation__c</fullName>
    <label>EMI Record Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMI&apos;s Created</fullName>
            </value>
            <value>
                <fullName>EMI&apos;s Not created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>