force-app/main/default/objects/Loan_Application__c/fields/Loan_to_Income_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Income_Ratio__c</fullName>
    <formula>Principal_Amount__c / Customer__r.Annual_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan to Income Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>