force-app/main/default/objects/Loan_Application__c/fields/Monthly_EMI__c.field-meta.xml
<CustomField>
    <fullName>Monthly_EMI__c</fullName>
    <formula>ROUND(
    (Principal_Amount__c *  Monthly_Interest__c ) /
    (1 - (1 +  Monthly_Interest__c )^ -Tenure_Months__c),2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>