force-app/main/default/objects/Loan_Application__c/fields/Monthly_Interest__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Interest__c</fullName>
    <formula>(Annual_Interest_Rate__c / 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>