force-app/main/default/objects/Loan_Application__c/fields/Total_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable__c</fullName>
    <formula>Monthly_EMI__c *  Tenure_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>