force-app/main/default/objects/Loan_Application__c/fields/Underwriting_Score__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Score__c</fullName>
    <label>Underwriting Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>