force-app/main/default/objects/Loan_Application__c/recordTypes/Mortgage.recordType-meta.xml
<RecordType>
    <fullName>Mortgage</fullName>
    <active>true</active>
    <label>Mortgage(Home)</label>
</RecordType>