force-app/main/default/objects/Loan_Application__c/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <label>Retail(Personal/Auto)</label>
</RecordType>