force-app/main/default/objects/Loan_Application__c/recordTypes/SME_Business.recordType-meta.xml
<RecordType>
    <fullName>SME_Business</fullName>
    <active>true</active>
    <label>SME(Business)</label>
</RecordType>