force-app/main/default/objects/Loan_Application__c/validationRules/Disbursement_Requires_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Disbursement_Requires_Approval</fullName>
    <active>true</active>
    <description>Disbursement requires approval</description>
    <errorConditionFormula>OR(
/* if approved and date not there*/
AND(
ISPICKVAL( Application_Status__c , &apos;Approved&apos;),
ISBLANK( Disbursement_Date__c )
),
/* if not approved and date is present */
AND(
NOT(ISPICKVAL(Application_Status__c , &apos;Approved&apos;)),
NOT(ISBLANK(Disbursement_Date__c ))
)
)</errorConditionFormula>
    <errorMessage>Disbursement date should be mentioned if application is approved</errorMessage>
</ValidationRule>