force-app/main/default/objects/Loan_Application__c/validationRules/Interest_Rate_cannot_exceed_36.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_Rate_cannot_exceed_36</fullName>
    <active>true</active>
    <description>Interest Rate cannot be provided more than 36%</description>
    <errorConditionFormula>OR( Annual_Interest_Rate__c &lt; 0.05, Annual_Interest_Rate__c &gt; 0.36)</errorConditionFormula>
    <errorDisplayField>Annual_Interest_Rate__c</errorDisplayField>
    <errorMessage>Interest Rate must be between 5% to 36%</errorMessage>
</ValidationRule>