force-app/main/default/objects/Loan_Application__c/validationRules/Sanctioned_Amount_less_Prinicipal_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Sanctioned_Amount_less_Prinicipal_Amount</fullName>
    <active>true</active>
    <description>Sanctioned Amount cannot be more than Principal Amount</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Sanctioned_Amount__c )),
NOT(ISBLANK(Principal_Amount__c )),
IF( Sanctioned_Amount__c &gt;  Principal_Amount__c , True, False)
)</errorConditionFormula>
    <errorDisplayField>Sanctioned_Amount__c</errorDisplayField>
    <errorMessage>Sanctioned Amount cannot be more than Principal Amount</errorMessage>
</ValidationRule>