force-app/main/default/objects/Loan_Application__c/validationRules/terms_of_loan_product_and_Tenure.validationRule-meta.xml
<ValidationRule>
    <fullName>terms_of_loan_product_and_Tenure</fullName>
    <active>true</active>
    <description>Tenure months will depend on the Loan product</description>
    <errorConditionFormula>OR(
      AND( ISPICKVAL(Loan_Product__c, &quot;Gold&quot;),  Tenure_Months__c &gt;24),
      AND(ISPICKVAL(Loan_Product__c, &quot;Home&quot;),  Tenure_Months__c &lt; 60)

)</errorConditionFormula>
    <errorDisplayField>Tenure_Months__c</errorDisplayField>
    <errorMessage>Tenure is not valid for the selected Loan Product.</errorMessage>
</ValidationRule>